# autd3-capi

./: .gitignore  Cargo.toml  Makefile.toml  README.md  ThirdPartyNotice.txt  build.py
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
autd3capi/: Cargo.toml
autd3capi-backend-cuda/: Cargo.toml
autd3capi-backend-cuda/src/: lib.rs
autd3capi-def/: Cargo.toml
autd3capi-def/src/: controller.rs  custom.rs  drive.rs  lib.rs  link.rs  result.rs  sampling_config.rs
autd3capi-def/src/common/: drive.rs  gain_stm_mode.rs  loop_behavior.rs  mod.rs  result.rs  sampling_config.rs  segment.rs
autd3capi-def/src/dynamic_datagram/: clear.rs  debug.rs  force_fan.rs  gain.rs  mod.rs  mod_delay.rs  modulation.rs  phase_filter.rs  reads_fpga_state.rs  silencer.rs  synchronize.rs  with_segment.rs
autd3capi-def/src/dynamic_datagram/stm/: focus.rs  gain.rs
autd3capi-def/src/gain/: custom.rs  mod.rs
autd3capi-def/src/modulation/: custom.rs
autd3capi-def/src/ptr/: geometry.rs  mod.rs  modulation.rs  stm.rs
autd3capi-driver/: Cargo.toml
autd3capi-driver/src/: autd3_device.rs  datagram.rs  duration.rs  lib.rs  link.rs  result.rs  sender.rs  timer.rs
autd3capi-driver/src/datagram/: mod.rs  tuple.rs
autd3capi-driver/src/datagram/gain/: cache.rs  mod.rs
autd3capi-driver/src/datagram/modulation/: cache.rs  mod.rs
autd3capi-driver/src/ethercat/: dc_sys_time.rs  mod.rs  sync_mode.rs
autd3capi-driver/src/firmware/: mod.rs
autd3capi-driver/src/firmware/cpu/: mod.rs  silencer_target.rs
autd3capi-driver/src/firmware/cpu/datagram/: clear.rs  debug.rs  force_fan.rs  gain.rs  mod.rs  modulation.rs  phase_filter.rs  pulse_width_encoder.rs  reads_fpga_state.rs  segment.rs  silencer.rs  synchronize.rs  with_segment.rs  with_segment_transition.rs
autd3capi-driver/src/firmware/cpu/datagram/stm/: focus.rs  gain.rs
autd3capi-driver/src/firmware/fpga/: debug_type.rs  drive.rs  gpio.rs  loop_behavior.rs  mod.rs  sampling_config.rs  segment.rs  silencer_target.rs  stm_sampling_config.rs  transition_mode.rs
autd3capi-driver/src/ptr/: controller.rs  datagram.rs  environment.rs  gain.rs  geometry.rs  link.rs  link_sync.rs  mod.rs  modulation.rs  runtime.rs  stm.rs
autd3capi-driver/src/resampler/: mod.rs
autd3capi-emulator/: Cargo.toml
autd3capi-emulator/src/: drive.rs  instant.rs  lib.rs  option.rs  output.rs  ptr.rs  range.rs  result.rs  rms.rs
autd3capi-gain-holo/: Cargo.toml
autd3capi-gain-holo/src/: constraint.rs  greedy.rs  gs.rs  gspat.rs  lib.rs  lm.rs  naive.rs  nalgebra_backend.rs  sdp.rs
autd3capi-link-ethercrab/: Cargo.toml  build.rs
autd3capi-link-ethercrab/def/: wpcapext.def
autd3capi-link-ethercrab/src/: lib.rs  thread_builder.rs
autd3capi-link-remote/: Cargo.toml
autd3capi-link-remote/src/: lib.rs
autd3capi-link-simulator/: Cargo.toml
autd3capi-link-simulator/src/: lib.rs
autd3capi-link-soem/: Cargo.toml
autd3capi-link-soem/src/: lib.rs  local.rs  process_priority.rs  remote.rs  timer_strategy.rs
autd3capi-link-twincat/: Cargo.toml
autd3capi-link-twincat/src/: lib.rs
autd3capi-link-visualizer/: Cargo.toml
autd3capi-link-visualizer/src/: lib.rs  null.rs  plotters.rs  python.rs
autd3capi-modulation-audio-file/: Cargo.toml
autd3capi-modulation-audio-file/src/: lib.rs
autd3capi/src/: controller.rs  environment.rs  lib.rs  result.rs
autd3capi/src/controller/: builder.rs  group.rs  mod.rs  sender.rs  timer.rs
autd3capi/src/datagram/: clear.rs  debug.rs  force_fan.rs  gpio_out.rs  group.rs  mod.rs  output_mask.rs  phase_corr.rs  phase_filter.rs  pulse_width_encoder.rs  reads_fpga_state.rs  segment.rs  silencer.rs  synchronize.rs  tuple.rs  with_parallel_threshold.rs  with_timeout.rs
autd3capi/src/datagram/stm/: foci.rs  focus.rs  gain.rs  mod.rs
autd3capi/src/driver/: mod.rs
autd3capi/src/driver/ethercat/: dc_sys_time.rs  mod.rs
autd3capi/src/driver/firmware/: mod.rs
autd3capi/src/driver/firmware/fpga/: debug_type.rs  drive.rs  loop_behavior.rs  mod.rs  phase.rs  pulse_width.rs  sampling_config.rs  transition_mode.rs
autd3capi/src/gain/: bessel.rs  cache.rs  custom.rs  focus.rs  group.rs  mod.rs  null.rs  plane.rs  raw.rs  trans_test.rs  transform.rs  uniform.rs
autd3capi/src/geometry/: device.rs  mod.rs  rotation.rs  transducer.rs
autd3capi/src/link/: audit.rs  mod.rs  nop.rs
autd3capi/src/modulation/: cache.rs  custom.rs  fir.rs  fourier.rs  mixer.rs  mod.rs  radiation_pressure.rs  raw.rs  sine.rs  square.rs  static.rs  transform.rs
autd3capi/src/stm/: focus.rs  gain.rs  mod.rs
tools/license-checker/: Cargo.toml  license-file.toml
tools/license-checker/src/: main.rs
