[package]
name = "autd3capi-backend-cuda"
version = "25.3.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { path = "../autd3capi-driver" }
autd3capi-gain-holo = { path = "../autd3capi-gain-holo" }
autd3-gain-holo = { workspace = true, features = ["async-trait"] }
autd3-backend-cuda = { workspace = true, features = ["async-trait"] }
libc = { workspace = true }
