[package]
name = "autd3capi-def"
version = "19.0.0"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "Base library for autd3 C API"
repository = "https://github.com/shinolab/autd3"
readme = "README.md"
keywords = ["autd"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
autd3 = { default-features = false, features = ["sync"], version = "19.0.0" }
autd3-driver = { features = ["sync"], version = "19.0.0" }
autd3-derive = { version = "19.0.0" }
libc = "0.2.144"

[features]
single_float = ["autd3/single_float", "autd3-driver/single_float"]
use_meter = ["autd3/use_meter", "autd3-driver/use_meter"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
memoffset = "0.9.0"
