[package]
name = "autd3capi-def"
version = "22.0.0-rc.2"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "Base library for autd3 C API"
repository = "https://github.com/shinolab/autd3"
readme = "README.md"
keywords = ["autd"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
autd3 = { version = "22.0.0-rc.2", features = ["async-trait"] }
autd3-driver = { version = "22.0.0-rc.2", features = ["derive", "async-trait"] }
libc = "0.2.144"
pin-project = "1.1.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

[features]
single_float = ["autd3/single_float", "autd3-driver/single_float"]
use_meter = ["autd3/use_meter", "autd3-driver/use_meter"]
export = []

[dev-dependencies]
assert_approx_eq = "1.1.0"
memoffset = "0.9.0"
