[package]
name = "autd3capi-driver"
description = "autd3capi base library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
autd3 = { workspace = true }
autd3-core = { workspace = true }
autd3-driver = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[features]
unity = ["autd3-core/left_handed", "autd3-core/use_meter"]
dynamic_freq = ["autd3-core/dynamic_freq", "autd3/dynamic_freq"]
