[package]
name = "autd3capi-driver"
description = "autd3capi base library"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
autd3 = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[features]
unity = ["autd3/left_handed", "autd3/use_meter"]
