[package]
name = "autd3capi-emulator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
autd3-emulator = { workspace = true, features = ["async-trait", "gpu", "inplace"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
autd3capi = { workspace = true }
