[package]
name = "autd3capi-gain-holo"
version = "21.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-gain-holo = { version = "21.0.1", features = ["async-trait"] }

[features]
single_float = ["autd3capi-def/single_float", "autd3-gain-holo/single_float"]
use_meter = ["autd3capi-def/use_meter", "autd3-gain-holo/use_meter"]
