[package]
name = "autd3capi-gain-holo"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
autd3-gain-holo = { workspace = true, features = ["async-trait"] }
