[package]
name = "autd3capi-link-ethercrab"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]


[dependencies]
autd3-link-ethercrab = { workspace = true, features = ["blocking"] }
autd3capi-driver = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter"] }
ethercrab = { version = "=0.6.0", default-features = false }
