[package]
name = "autd3capi-link-ethercrab"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]


[dependencies]
autd3-link-ethercrab = { workspace = true }
autd3capi-driver = { workspace = true }
