[package]
name = "autd3capi-link-simulator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
static = []

[dependencies]
autd3-link-simulator = { workspace = true, features = ["async-trait"] }
autd3capi-driver = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }
