[package]
name = "autd3capi-link-simulator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
static = ["autd3capi-driver/static"]

[dependencies]
autd3-link-simulator = { workspace = true, features = ["blocking"] }
autd3capi-driver = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
