[package]
name = "autd3capi-link-soem"
version = "26.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
static = []

[dependencies]
autd3capi-driver = { path = "../autd3capi-driver" }
autd3-link-soem = { workspace = true, features = ["local", "remote", "async-trait"] }
tracing-subscriber = { workspace = true }
