[package]
name = "autd3capi-link-soem"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
static = []

[dependencies]
autd3capi-driver = { workspace = true }
autd3-link-soem = { workspace = true, features = ["local", "remote", "async-trait"] }
tracing-subscriber = { workspace = true }
thread-priority = "1.1.0"
