[package]
name = "autd3capi-link-twincat"
version = "26.0.0-beta.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { path = "../autd3capi-driver" }
autd3-link-twincat = { workspace = true, features = ["local", "remote", "async-trait"] }
