[package]
name = "autd3capi-link-twincat"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
autd3capi-driver = { workspace = true }
autd3-link-twincat = { workspace = true }
