[package]
name = "autd3capi-link-visualizer"
version = "26.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { path = "../autd3capi-driver" }
autd3-link-visualizer = { workspace = true, features = ["plotters", "python", "gpu", "async-trait"] }
