[package]
name = "autd3capi-link-visualizer"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
autd3-link-visualizer = { workspace = true, features = ["plotters", "python", "gpu", "async-trait"] }
