[package]
name = "autd3capi-modulation-audio-file"
version = "22.0.0-rc.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-def = { path = "../autd3capi-def" }
autd3-modulation-audio-file = { version = "22.0.0-rc.2", features = ["async-trait"] }
