[package]
name = "autd3capi-modulation-audio-file"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
autd3-modulation-audio-file = { workspace = true, features = ["async-trait"] }
tracing-subscriber = { workspace = true }
