[package]
name = "autd3capi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
seq-macro = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }
