[package]
name = "autd3capi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
autd3capi-driver = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
seq-macro = { workspace = true }
tracing = { workspace = true }

[features]
dynamic_freq = ["autd3capi-driver/dynamic_freq"]
