[package]
name = "autd3capi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
autd3capi-driver = { workspace = true }
libc = { workspace = true }
seq-macro = { workspace = true }
